@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - jbj: add :sqlescape for use in SQL statements generated by --qf.
     - jbj: rework --yum:primary.sqlite to include quoting.
     - jbj: add header extensions similar to xml for sql.
     - jbj: rename the primary.xml et al header extensions, adding "xml".
